<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.BesinDetayiFragment">

        <include
            android:id="@+id/include"
            layout="@layout/app_bar" />


        <ImageView
            android:id="@+id/besinImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/besinIsim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/besin_isim"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/besinKalorisi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/besin_kalori"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/besinKarbonhidrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/besin_karbonhidrat"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/besinProtein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/besin_protein"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/besinYag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/besin_yag"
            android:textSize="20sp" />


    </LinearLayout>
</layout>